[package]
name = "abyssal"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.8.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
egui = "0.30.0"
egui_tiles = "0.11.0"
egui-wgpu = { version = "0.30.0", features = ["winit"] }
egui-winit = "0.30.0"
env_logger = "0.11.6"
image = { version = "0.24.9", default-features = false, features = [
    "png",
    "hdr",
] }
log = "0.4.22"
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"] }
pollster = "0.4.0"
structopt = "0.3.26"
tokio = { version = "1.31.0", features = ["full"] }
wgpu = "23.0.1"
winit = "0.30.8"
